# src/infra/http/controllers/ClienteController.ts
@@ -1,4 +1,4 @@
-import { Body, Path, Post, Get, Route, Tags } from "tsoa";
+import { Body, Path, Post, Get, Route, Tags, Header } from "tsoa";
 import { CadastrarClienteDto } from "../../../domain/dto/CadastrarClienteDto";
 import { CadastrarClienteUseCase } from "../../../application/usecases/CadastrarClienteUseCase";
 import { ClienteGateway } from "../../database/gateways/ClienteGateway";
@@ -27,7 +27,9 @@ export default class ClienteController {
     }
     /**
      * Cadastro do cliente: nome e e-mail
-     */
+     * @returns
+     * Dados do cliente cadastrado
+     * */
     @Post("/")
     public async salvarCliente(@Body() body: ClienteRequest): Promise<ClienteResponse> {
         const dto: CadastrarClienteDto = {
@@ -50,7 +52,9 @@ export default class ClienteController {
     }
     /**
      * Buscar por CPF
-     */
+     * @returns
+     * Dados do cliente
+     * */
     @Get("/cpf/:cpf")
     public async buscarCPF(@Path() cpf: string): Promise<ClienteResponse> {
         const cliente = await this.cadastrarClienteUseCase.buscarPorCPF(cpf);
@@ -65,6 +69,8 @@ export default class ClienteController {
     }
     /**
      * Buscar por E-mail
+     * @returns
+     * Dados do cliente
      */
     @Get("/email/:email")
     public async buscarEmail(@Path() email: string): Promise<ClienteResponse> {
@@ -77,5 +83,23 @@ export default class ClienteController {
             email: cliente.email?.value || "",
         }
 
+    }
+    /**
+     * Busca pelo usuário do token
+     * @headers
+     * Token enviado
+     * @returns
+     * Dados do cliente
+     */
+    @Get("token/")
+    public async buscarPorToken(@Header('Authorization') autorizacao: string): Promise<ClienteResponse> {
+        const cliente = await this.cadastrarClienteUseCase.buscarPorToken(autorizacao);
+
+        return {
+            id: cliente.id,
+            nome: cliente.nome,
+            cpf: cliente.cpf?.value || "",
+            email: cliente.email?.value || "",
+        }
     }
 }
